fix overflow events

--- a/src/sass/_gallery.sass
+++ b/src/sass/_gallery.sass
@@ -4,6 +4,8 @@
 	background: #fff
 	position: relative
 	clear: both
+	overflow: auto
+	+clr
 	.events
 		float: left
 		width: 50%
@@ -13,6 +15,7 @@
 		top: 0
 		z-index: 20
 		background: #fff
+
 		+r(800)
 			width: auto
 			position: static
